--- a/pom.xml
+++ b/pom.xml
@@ -3,11 +3,11 @@
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.myspace</groupId>
-  <artifactId>BPM-SiniestroAgricola</artifactId>
-  <version>1.0.0</version>
+  <artifactId>servicioRestDemo</artifactId>
+  <version>1.0.18</version>
   <packaging>kjar</packaging>
-  <name>BPM-SiniestroAgricola</name>
-  <description>Sistema de registro y control de siniestros agrícolas</description>
+  <name>servicioRestDemo</name>
+  <description></description>
   <dependencies>
     <dependency>
       <groupId>com.thoughtworks.xstream</groupId>
@@ -44,11 +44,6 @@
       <artifactId>kie-api</artifactId>
       <version>7.12.0.Final</version>
       <scope>provided</scope>
-    </dependency>
-    <dependency>
-      <groupId>com.google.code.gson</groupId>
-      <artifactId>gson</artifactId>
-      <version>2.8.5</version>
     </dependency>
   </dependencies>
   <build>
